--- a/aprox.bib
+++ b/aprox.bib
@@ -309,3 +309,24 @@ pages = {634–652},
 numpages = {19},
 keywords = {approximation ratio, set cover}
 }
+
+@article{AryaLocal,
+author = {Arya, Vijay and Garg, Naveen and Khandekar, Rohit and Munagala, Kamesh and Pandit, Vinayaka},
+year = {2003},
+month = {01},
+pages = {},
+title = {Local Search Heuristics for $k$-Median and Facility Location Problems},
+volume = {33},
+journal = {SIAM Journal on Computing},
+doi = {10.1137/S0097539702416402}
+}
+
+@misc{li2012,
+      title={Approximating $k$-Median via Pseudo-Approximation}, 
+      author={Shi Li and Ola Svensson},
+      year={2012},
+      eprint={1211.0243},
+      archivePrefix={arXiv},
+      primaryClass={cs.DS},
+      url={https://arxiv.org/abs/1211.0243}, 
+}
