--- a/k-median/buscalocal.tex
+++ b/k-median/buscalocal.tex
@@ -1,13 +1,15 @@
+Nessa seção falaremos sobre o algoritmo de busca local com trocas únicas para o problema das $k$-medianas. Esse algoritmo foi estudado na seção 9.2 do livro WS2011 e foi desenvolvido por Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal}.
+
 Aqui falaremos sobre custos de transporte entre duas instalações, embora o custo de transporte esteja definido apenas para um cliente e uma instalação.
 Podemos definir o custo de transporte entre duas instalações como o menor custo de transporte entre essas duas instalações e um cliente qualquer. Então a desigualdade triangular valerá da seguinte forma: para todo $i,j,k \in F \cup D$ 
 \[ c_{ij} \leq c_{ik} + c_{kj}.\]
 
 Um algoritmo de busca local começa com uma solução viável para o problema e checa se alguma alteração local melhora o custo da solução atual. Caso essa melhora ocorra, essa alteração é feita. Esse processo se repete até que não exista alteração que melhore o custo e, então, encontramos uma solução que é chamada de \emph{localmente ótima}. A implementação direta da ideia da busca local na maioria das vezes não garante execução em tempo polinomial e, nesses casos, as alterações só acontecerão se satisfizerem alguma restrição. 
 
-O algoritmo contará apenas com uma operação de troca em que fechamos uma instalação aberta e abrimos uma instalação fechada. Operações que exclusivamente abram ou fechem instalações não são viáveis, uma vez que apenas abrir uma instalação faz com que nossa solução se torne inviável e é fácil notar que somente fechar alguma instalação não melhora o valor da solução. A solução inicial terá  $k$ instalações abertas escolhidas de maneira arbitrária e um cliente sempre estará ligado à instalação aberta mais próxima a ele. Uma operação só será feita se melhorar o custo da solução atual em uma razão de $1-\delta$, para um $\delta>0$. Como essa solução não é necessariamente localmente ótima, iremos chamá-la de solução \emph{quase localmente ótima}. Ao final, mostraremos que, dado um $\eps > 0$, o algoritmo é uma $5(1 + \epsilon)$-aproximação para o problema de $k$-mediana, onde o $\delta$ será escolhido em função do $\epsilon$.
+O algoritmo contará apenas com uma operação de troca em que fechamos uma instalação aberta e abrimos uma instalação fechada. Operações que exclusivamente abram ou fechem instalações não são viáveis, uma vez que apenas abrir uma instalação faz com que nossa solução se torne inviável e é fácil notar que somente fechar alguma instalação não melhora o valor da solução. A solução inicial terá  $k$ instalações abertas escolhidas de maneira arbitrária e um cliente sempre estará ligado à instalação aberta mais próxima a ele. Uma operação só será feita se melhorar o custo da solução atual em uma razão de $1-\delta$, para um $\delta>0$. Como essa solução não é necessariamente localmente ótima, iremos chamá-la de solução \emph{quase localmente ótima}. Ao final, mostraremos que, dado um $\eps > 0$, o algoritmo é uma $5(1 + \epsilon)$-aproximação para o problema das $k$-medianas, onde o $\delta$ será escolhido em função do $\epsilon$.
 
 \begin{theorem}
-    Para qualquer entrada do $k$-mediana, uma solução quase localmente ótima em respeito a operação de troca tem custo no máximo $5(1+\epsilon)$ vezes o custo de uma solução ótima.
+    Para qualquer entrada do problema das $k$-medianas, uma solução quase localmente ótima em respeito a operação de troca tem custo no máximo $5(1+\epsilon)$ vezes o custo de uma solução ótima.
 \end{theorem}
 \begin{proof}
 Seja $S$ o conjunto de instalações que serão abertas na solução quase localmente ótima e $S^*$ o conjunto de instalações que serão abertas na solução ótima. Considere $\sigma: D\rightarrow S$ e $\sigma^* : D \rightarrow S^*$ funções que mapeiam cada cliente à instalação de $S$ e $S^*$ mais próximo a ele, respectivamente. Defina também a funções $\phi : S^* \rightarrow S$ que mapeia cada instalação em $S^*$ à instalação em $S$ mais próxima a ela.
