--- a/k-median/intro.tex
+++ b/k-median/intro.tex
@@ -1,10 +1,10 @@
-Antes de falarmos sobre algoritmos de aproximação para o problema da $k$-mediana, vamos mostrar que, assumindo $P \neq \NP$, não existe algoritmo polinomial que resolva nosso problema, ou seja, vamos mostrar que nosso problema é $\NP$-difícil. Vamos fazer uma redução do problema da cobertura de conjuntos na sua versão de decisão para o problema da $k$-mediana.
+Antes de falarmos sobre algoritmos de aproximação para o problema das $k$-medianas, vamos mostrar que, assumindo $P \neq \NP$, não existe algoritmo polinomial que resolva nosso problema, ou seja, vamos mostrar que nosso problema é $\NP$-difícil. Vamos fazer uma redução do problema da cobertura de conjuntos na sua versão de decisão para o problema das $k$-medianas.
 
 \begin{theorem}
-O problema da $k$-mediana é $\NP$-difícil.
+O problema das $k$-medianas é $\NP$-difícil.
 \end{theorem}
 \begin{proof}
-Seja $I \eqqcolon (E,\{S_1,\ldots,S_m\},k)$ uma instância do problema da cobertura de conjuntos na versão de decisão. Vamos definir o conjunto de instalações $F \coloneqq [m]$, o conjunto de clientes $D \coloneqq E$ e a função de custo $c_{ij} = 1$ se $j \in S_i$ e 3 caso contrário para cada $i \in F$ e $j \in D$. Assim, temos uma instância $I' \coloneqq (F,D,c,k)$ para o problema da $k$-mediana. É fácil notar que essa é uma instância da versão métrica do problema. Então, vamos mostrar que a resposta para $I$ é sim se e somente se $\opt(I') = |D|$. Antes, note que $\opt(I') \geq |D|$, uma vez que cada cliente vai ter um custo de conexão de pelo menos 1.
+Seja $I \eqqcolon (E,\{S_1,\ldots,S_m\},k)$ uma instância do problema da cobertura de conjuntos na versão de decisão. Vamos definir o conjunto de instalações $F \coloneqq [m]$, o conjunto de clientes $D \coloneqq E$ e a função de custo $c_{ij} = 1$ se $j \in S_i$ e 3 caso contrário para cada $i \in F$ e $j \in D$. Assim, temos uma instância $I' \coloneqq (F,D,c,k)$ para o problema das $k$-medianas. É fácil notar que essa é uma instância da versão métrica do problema. Então, vamos mostrar que a resposta para $I$ é sim se e somente se $\opt(I') = |D|$. Antes, note que $\opt(I') \geq |D|$, uma vez que cada cliente vai ter um custo de conexão de pelo menos 1.
 
 Vamos mostrar que se a resposta para $I$ é sim, então $\opt(I') = |D|$. Como a resposta para $I$ é sim, então existem $k$ elementos de $\{S_1,\ldots,S_m\}$ tal que a união deles é igual a $E$, vamos supor sem perda de generalidade que esses elementos são os $k$ primeiros. Denote $F' \coloneqq [k]$. A solução de $I'$ em que abrimos as instalações em $F'$ tem custo $|D|$, uma vez que para cada cliente $i$ temos que $i \in E = \bigcup_{j= 1}^k S_j$, então existe $j \in [k]$ tal que $i \in S_j$ e, consequentemente, $c_{ij} = 1$. Portanto, $\opt(I') \leq |D|$, como ja sabemos que $\opt(I') \geq |D|$, então $opt(I') = |D|$.
 
