--- a/facility/inaprox.tex
+++ b/facility/inaprox.tex
@@ -1,19 +1,31 @@
-Vamos mostrar que se existe uma $\alpha$-aproximação para o problema de localização de instalações com $\alpha < 1.463$ então existe um algoritmo que é uma $(c \ln n)$-aproximação para o problema da cobertura de conjuntos sem peso com $c<1$. 
-Feige~\cite{Feige98} mostrou que se tal algoritmo existe, então existe um algoritmo determinístico que leva tempo $O(n^{O(\log\log n)})$ para todo problema $NP$-completo.
+Nesta seção vamos mostrar um resultado que limita inferiormente a razão de aproximação para os algoritmos do problema de localização de instalações. Esse resultado é o Corolário 16.16 que se encontra na seção 16.2 do livro WS2011. Ele foi desenvolvido por Guha e Kuller~\cite{GUHA1999228}.
 
-Vamos fazer um algoritmo de aproximação para o problema da cobertura de conjuntos utilizando várias chamadas ao algoritmo que é uma $\alpha$-aproximação para o problema de localização de instalações. 
-Seja $(E,\{S_1,\ldots,S_m\})$ uma instância do problema de cobertura de conjuntos, criaremos uma sequência de instâncias para o problema de localização de instalações. 
+Vamos mostrar que se existe uma $\alpha$-aproximação para o problema de localização de instalações com $\alpha < 1.463$ então existe um algoritmo que é uma $(c \ln n)$-aproximação para o problema da cobertura de conjuntos sem peso com $c<1$. 
+Feige~\cite{Feige98} mostrou a existência desse segundo algoritmo implica na existência de um algoritmo determinístico que leva tempo $O(n^{O(\log\log n)})$ para todo problema $\NP$-completo.
+
+Vamos apresentar um algoritmo de aproximação para o problema da cobertura de conjuntos que utiliza várias chamadas ao algoritmo que é uma $\alpha$-aproximação para o problema de localização de instalações. 
+Seja $(E,\{S_1,\ldots,S_m\})$ uma instância do problema de cobertura de conjuntos. Criaremos uma sequência de instâncias para o problema de localização de instalações. 
 A primeira delas terá o conjunto de instalações $F \coloneqq [m]$ e o conjunto de clientes $D \coloneqq E$. 
-A ideia é que escolheremos um subconjunto $F' \subseteq F$ de instalações que serão abertas e existirá um subconjunto $D' \subseteq D$ tal que para todo $j \in D'$ existe $i \in F'$ tal que $j \in S_i$. 
-Então, para construir a próxima instância usaremos o conjunto de instalações $F \setminus F'$ e o conjunto de clientes $D \setminus D'$, que representam os subconjuntos de $E$ que ainda podem ser escolhidos e os elementos de $E$ que ainda não foram cobertos, respectivamente. 
+A ideia é que escolheremos um conjunto $F' \subseteq F$ de instalações que serão abertas e existirá um conjunto $D' \subseteq D$ tal que, para todo $j \in D'$, existe $i \in F'$ tal que $j \in S_i$. 
+Então, para construir a próxima instância, usaremos o conjunto de instalações $F \setminus F'$ e o conjunto de clientes $D \setminus D'$, que representam os subconjuntos de $E$ que ainda podem ser escolhidos e os elementos de $E$ que ainda não foram cobertos, respectivamente. 
 Isso acontecerá sucessivamente até que todo os elementos de $E$ sejam cobertos, ou seja, até que $D = \emptyset$.
-O custo de conexão dos clientes será igual para todas as instâncias. Para uma instalação $i$ e um cliente $j$ definimos $c_{ij}\coloneqq 1$ se $j \in S_i$ e $3$ caso contrário.
-O custo de abertura das instalações será uniforme em uma mesma instância, definimos $f_i \coloneqq \gamma |D|/k^*$ para todo $i\in F$ em que $\gamma$ é uma constante que definiremos posteriormente, $D$ é o conjunto de elementos que ainda não foram cobertos e $k^*$ é o tamanho mínimo de uma cobertura de conjuntos para essa instância. Como é difícil saber o tamanho de uma cobertura de conjuntos ótima, vamos rodar essa rotina para todo $k \in [m]$, ou seja, todos os candidatos a tamanho de uma cobertura de conjuntos ótima para essa instância.
+O custo de conexão dos clientes será igual para todas as instâncias. Para uma instalação $i$ e um cliente $j$, definimos $c_{ij}\coloneqq 1$ se $j \in S_i$ e $c_{ij} \coloneqq 3$ caso contrário.
+O custo de abertura das instalações será uniforme em uma mesma instância. Definimos $f_i \coloneqq \gamma |D|/k^*$ para todo $i\in F$ em que $\gamma$ é uma constante que definiremos posteriormente, $D$ é o conjunto de elementos que ainda não foram cobertos e $k^*$ é o tamanho mínimo de uma cobertura de conjuntos para a instância do problema de cobertura de conjuntos recebida. Como é difícil saber o tamanho de uma cobertura de conjuntos ótima, vamos executar essa rotina para todo $k \in [m]$, ou seja, para todos os candidatos a tamanho $k^*$ de uma cobertura de conjuntos ótima para essa instância.
+
+O algoritmo é formalizado no algoritmo {\sc Inaprox-GK}, onde {\sc $\alpha$-aprox-loc-inst} refere-se à $\alpha$-aproximação para o problema de localização de instalações e o valor de $\gamma$ será estabelecido no Teorema~\ref{inaprox}.
 
 \begin{algorithm}
-    \caption{}
+    \caption{\sc Inaprox-GK($E,\{S_1,\ldots,S_m\}$)}
     \begin{algorithmic}[1]
-        \State $c_{ij} \gets 1$ se $j \in S_i$ e 3 caso contrário, para todo $i \in [m]$ e $j \in E$.
+        \For{$i \gets 1$ até $m$}
+            \For{todo $j \in E$}
+            \If{$j \in S_i$}
+            \State $c_{ij} \gets 1$
+            \Else
+            \State $c_{ij} \gets 3$
+            \EndIf
+            \EndFor
+        \EndFor
         \For{$k \gets 1$ até $m$}
             \State $I_k \gets \emptyset$
             \State $D \gets E$; $F \gets [m]$
@@ -31,13 +43,14 @@ O custo de abertura das instalações será uniforme em uma mesma instância, de
 
 
 \begin{theorem}
-Se existe uma $\alpha$-aproximação para o problema da localização de instalações com $\alpha < 1.463$, então o {\bf Algoritmo 8} é uma $(c \ln n)$-aproximação para o problema de cobertura de conjuntos com $c<1$ quando $n$ é suficiente grande.
+    \label{inaprox}
+Se existe uma $\alpha$-aproximação para o problema da localização de instalações com $\alpha < 1.463$, então o  Algoritmo {\sc Inaprox-GK} com $\gamma = 0.463$ é uma $(c \ln n)$-aproximação para o problema de cobertura de conjuntos com $c<1$ quando $n$ é suficiente grande.
 \end{theorem}
 
 \begin{proof}
-Seja $k^*$ o tamanho de uma cobertura de conjuntos ótima para a instância. Suponha que estamos na iteração $k^*$ do laço {\bf Para} e na iteração $\ell$ do laço {\bf Enquanto}.
-Seja $D_\ell$ e $F_\ell$ os conjuntos $D$ e $F$ no começo dessa iteração. Denote $n_\ell \coloneqq |D_\ell|$ e $f^\ell \coloneqq \gamma n_\ell /k^*$. Note que existe uma solução para essa instância do problema de localização de instalações com custo no máximo $f^\ell k^* + n_\ell$ em que abrimos todas as instalações que representam subconjuntos que estão em uma mesma resposta ótima da cobertura de conjuntos e associamos os clientes restantes às instalações com custo de conexão 1.
-Seja $F_\ell'$ o subconjunto das instalações devolvido pela chamada do algoritmo na Linha~7 e $D_\ell'$ o subconjunto de clientes encontrado na Linha~9. Seja $\beta_\ell \coloneqq k^*/|F_\ell'|$ e $p_\ell \coloneqq n_\ell / |D_\ell'|$. É fácil notar que o custo da solução $F'$ é
+Seja $k^*$ o tamanho de uma cobertura de conjuntos ótima para a instância do problema de cobertura de conjuntos recebida. Suponha que estamos na iteração $k^*$ do laço {\bf Para} e na iteração $\ell$ do laço {\bf Enquanto} do algoritmo {\sc Inaprox-GK}.
+Sejam $D_\ell$ e $F_\ell$ os conjuntos $D$ e $F$ no começo dessa iteração do laço {\bf Enquanto}. Sejam $n_\ell \coloneqq |D_\ell|$ e $f^\ell \coloneqq \gamma n_\ell /k^*$. Note que existe uma solução para a instância $(D_\ell,F_\ell,c,f^\ell)$ do problema de localização de instalações com custo no máximo $f^\ell k^* + n_\ell$ em que abrimos todas as instalações que representam subconjuntos que estão em uma cobertura de conjuntos ótima e associamos os clientes restantes às instalações com custo de conexão 1.
+Seja $F_\ell'$ o conjunto das instalações devolvido pela chamada do algoritmo na linha 7 e $D_\ell'$ o conjunto de clientes encontrado na linha 9. Sejam $\beta_\ell \coloneqq k^*/|F_\ell'|$ e $p_\ell \coloneqq |D_\ell'|/n_\ell $. É fácil notar que o custo da solução $F'_\ell$ é
 \[ |F_\ell'| f^\ell+ p_\ell n_\ell + 3 (1-p_\ell) n_\ell = n_\ell(\beta_\ell \gamma + 3 - 2p_\ell) \leq \alpha ( f^\ell k^* + n_\ell) = \alpha n_\ell (\gamma + 1)\]
 e, portanto, 
 \begin{equation} 
@@ -45,25 +58,23 @@ e, portanto,
 \frac{\beta_\ell + 3 - 2p_\ell}{\gamma + 1} \leq \alpha.
 \end{equation}
 
-Seja $c$ uma constante entre 0 e 1 que vamos escolher depois. Suponha que $p_\ell \leq 1 - e^{-\frac{\beta_\ell}{c}}$ para algum $\ell$. Defina 
-\[f(\beta_\ell) \coloneqq \frac{\beta_\ell \gamma + 1 + 2e^{\frac{\beta_\ell}{c}}}{\gamma + 1}.\]
+Seja $c$ uma constante entre 0 e 1 que vamos escolher depois. Suponha que $p_\ell \leq 1 - e^{-\frac{\beta_\ell}{c}}$ para algum $\ell$ e $0 < \gamma < 1$. Defina 
+\[f(\beta_\ell) \coloneqq \frac{\beta_\ell \gamma + 1 + 2e^{-\frac{\beta_\ell}{c}}}{\gamma + 1}.\]
 Note que $f(\beta_\ell) \leq \frac{\beta_\ell + 3 - 2p_\ell}{1 + \gamma} \leq \alpha$.
 
-O valor de $\beta_\ell$ que minimiza $f$ é $c\ln(\frac{2}{\gamma c})$, uma vez que $f'(c\ln(\frac{2}{\gamma c})) = 0$ e $~f''(\beta_\ell)~>~0$ para qualquer que seja o valor de $\beta_\ell$. Assim, temos que 
+O valor de $\beta_\ell$ que minimiza $f$ é $c\ln(\frac{2}{\gamma c})$, uma vez que $f'(c\ln(\frac{2}{\gamma c})) = 0$ e $~f''(\beta_\ell)~>~0$ qualquer que seja o valor de $\beta_\ell$. Assim, temos que 
 \[f(c\ln\left(\frac{2}{\gamma c}\right)) = \frac{1}{1+\gamma} \left( \gamma c + \ln\left(\frac{2}{\gamma c}\right) + \gamma c + 1 \right).\]
-Os valores de $c$ e $\gamma$ que maximizam essa função é $\gamma = 0.463$ e $c$ próximo de 1 e teremos $1.463 \leq f(1.463) \leq \alpha < 1.463$ o que é um absurdo.
+Os valores de $c$ e $\gamma$ que maximizam essa função são $\gamma = 0.463$ e $c$ próximo de 1, e teremos $1.463 \leq f(1.463) \leq \alpha < 1.463$, o que é um absurdo.
 
-Agora, vamos mostrar que se $p_\ell > 1 - e^{ - \frac{\beta_\ell}{c}}$ para todo $\ell$, então o algoritmo devolve uma $(c'\ln n)$-aproximação para o problema da cobertura de conjuntos com $c' < 1$. Vamos chamar de $r$ a quantidade de iterações que o laço {\bf Para} realiza. É evidente que $|I_{k^*}| = k^*\sum_{\ell = 1}^r \beta_\ell$, então a razão de aproximação desse algoritmo é no máximo $\sum_{\ell = 1}^r \beta_\ell$. Como vale que $p_\ell > 1 - e^{ - \frac{\beta_\ell}{c}}$, então temos que $\beta_\ell < c \ln\left( \frac{1}{1-p_\ell}\right)$. Note que $n_{\ell + 1} = n_\ell(1-p_\ell)$ e $n_r \geq 1$. Assim, vale que $n_1 \prod_{\ell =1}^{r-1} (1 - p_\ell) = n_r \geq 1$ e, consequentemente, $\ln\left(\prod_{\ell =1 }^{r-1} \frac{1}{1-p_\ell}\right) \leq \ln n_1 = \ln n$. Assim,
+Agora, vamos mostrar que, se $p_\ell > 1 - e^{ - \frac{\beta_\ell}{c}}$ para todo $\ell$, então o algoritmo {\sc Inaprox-GK} com $\gamma = 0.463$ devolve uma $(c'\ln n)$-aproximação para o problema da cobertura de conjuntos com $c' < 1$. Vamos chamar de $r$ a quantidade de iterações que o laço {\bf Enquanto} realiza. É evidente que $|I_{k^*}| = k^*\sum_{\ell = 1}^r \beta_\ell$, logo a razão de aproximação desse algoritmo é no máximo $\sum_{\ell = 1}^r \beta_\ell$. Para todo $\ell$, como vale que $p_\ell > 1 - e^{ - \frac{\beta_\ell}{c}}$, então temos que $\beta_\ell < c \ln\left( \frac{1}{1-p_\ell}\right)$. Note que $n_{\ell + 1} = n_\ell(1-p_\ell)$ e $n_r \geq 1$. Assim, vale que $n_1 \prod_{\ell =1}^{r-1} (1 - p_\ell) = n_r \geq 1$ e, consequentemente, $\ln\left(\prod_{\ell =1 }^{r-1} \frac{1}{1-p_\ell}\right) \leq \ln n_1 = \ln n$. Assim,
+\[ \sum_{\ell= 1}^r \beta_\ell = \sum_{\ell =1}^{r-1} \beta_\ell + \beta_r < c\sum_{\ell = 1}^{r-1} \ln \left( \frac{1}{1-p\ell}\right) + \beta_r \leq c \ln n + \beta_r. \]
+Como $r$ é a última iteração, vale que $p_r= 1$. Então pela desigualdade~\eqref{inaprox:beta} temos que $\beta_r \leq \alpha(1 + \frac{1}{\gamma}) < 4\alpha$ uma vez que escolhemos $\gamma = 0.463$. Portanto,
 \[
-\sum_{\ell= 1}^r \beta_\ell = \sum_{\ell =1}^{r-1} \beta_\ell + \beta_r < c\sum_{\ell = 1}^{r-1} \ln \left( \frac{1}{1-p\ell}\right) + \beta_r \leq c \ln n + \beta_r
+\sum_{\ell =1}^r \beta_\ell < c \ln n + \beta_r < c\ln n + 4\alpha \leq c' \ln n,
 \]
-como $r$ é a última iteração, vale que $p_r= 1$, então pela equação~\eqref{inaprox:beta} temos que $\beta_r \leq \alpha(1 + \frac{1}{\gamma}) < 4\alpha$ uma vez que escolhemos $\gamma = 0.463$. Portanto,
-\[
-\sum_{\ell =1}^r \beta_\ell < c \ln n + \beta_r < c\ln n + 4\alpha \leq c' \ln n
-\]
-em que a última desigualdade vale para algum $c' \in (c,1)$, uma vez que $4\alpha$ é constante e $n$ é suficientemente grande.
+em que a última desigualdade vale para algum $c' \in (c,1)$, uma vez que $4\alpha$ é constante e, pelo enunciado do teorema, podemos assumir que $n$ é suficientemente grande.
 
-Assim, temos uma aproximação para o problema de cobertura de conjuntos com razão de aproximação estritamente menor que $\ln n$.
+Assim, temos uma aproximação para o problema de cobertura de conjuntos com razão de aproximação estritamente menor que $\ln n$ para $n$ suficientemente grande.
 \end{proof}
 
-Juntando esse resultado com o resultado do Feige temos que a existência de uma $\alpha$-aproximação para o problema de localização de instalações com $\alpha < 1.463$ implica a existência de um algoritmo determinístico que leva tempo $O(n^{O(\log \log n)})$ para todo problema $\NP$-completo.
+Juntando esse resultado com o resultado do Feige, temos que a existência de uma $\alpha$-aproximação para o problema de localização de instalações com $\alpha < 1.463$ implica a existência de um algoritmo determinístico que leva tempo $O(n^{O(\log \log n)})$ para todo problema $\NP$-completo.
